# agent-history-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  agent-history-protocol-spec.md  ahp-deep-summary.md  ahp-psd.md  demo-recording.cast  explainer-script.md  index.html  pyproject.toml  sdk-implementation-guide.md
.github/workflows/: ci.yml
ahp/: __init__.py  _base_recorder.py  _globals.py  a2a.py  async_recorder.py  config.py  decorators.py  mcp_client.py  mcp_server.py  recorder.py  tracing.py
ahp/adapters/: __init__.py  openai.py
ahp/cli/: main.py
ahp/core/: __init__.py  async_chain.py  canonical.py  chain.py  context.py  evidence.py  filters.py  json_format.py  pricing.py  records.py  recovery.py  rotation.py  signing.py  types.py  uuid7.py  validation.py  verify.py  witness_client.py
ahp/export/: __init__.py  jsonl.py  otlp.py
ahp/integrations/: langchain.py
ahp/interceptors/: __init__.py  _base.py  grpc.py  http_auto.py  http_helper.py  mcp_auto.py  mcp_helper.py
ahp/protocols/: a2a.py  mcp_client.py  mcp_server.py
benchmarks/: bench.py
demo/: agent.py  record-demo.sh  run_full_demo.py  tamper.py
demo/showcase/: config.py  llm.py  run.py  sandbox.py  tools.py
demo/showcase/agents/: supervisor.py  support.py
demo/showcase/sandbox_data/: customers.json  orders.json  support_docs.json
docs/: eu-ai-act-compliance.md
docs/images/: ahp-demo.cast
test_openclaw/: package.json  test_ahp_openclaw.js
tests/: test_async.py  test_auto_http.py  test_chain_complete.py  test_cli.py  test_config.py  test_context.py  test_core.py  test_decorators.py  test_export.py  test_filters.py  test_grpc_real.py  test_integration.py  test_langchain.py  test_mcp.py  test_openai_adapter.py  test_production.py  test_protocols.py  test_real.py  test_recorder.py  test_recovery.py  test_remaining_gaps.py  test_rotation.py  test_serialization.py  test_sprint1.py  test_sprint4.py  test_streaming.py  test_tracing.py  test_witness.py
viewer/: index.html  serve.py
witness/: server.py
