[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahp"
version = "0.1.0a1"
description = "Agent History Protocol — tamper-evident recording for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "AHP Contributors" },
]
keywords = ["ai", "agents", "audit", "protocol", "security", "tamper-evident"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
signing = ["cryptography>=41.0"]
langchain = ["langchain-core>=0.1"]
all = ["cryptography>=41.0", "langchain-core>=0.1"]

[project.scripts]
ahp = "ahp.cli.main:main"

[project.urls]
Repository = "https://github.com/ahp-protocol/ahp"
Specification = "https://github.com/ahp-protocol/ahp/blob/main/agent-history-protocol-spec.md"

[tool.hatch.build.targets.wheel]
packages = ["ahp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
