[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahp"
version = "0.1.0a1"
description = "Agent History Protocol — tamper-evident recording for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "AHP Contributors" },
]
keywords = ["ai", "agents", "audit", "protocol", "security", "tamper-evident"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
signing = ["cryptography>=41.0"]
langchain = ["langchain-core>=0.1"]
config = ["pyyaml>=6.0"]
filters = ["regex>=2023.0"]
grpc = ["grpcio>=1.50"]
all = [
    "cryptography>=41.0",
    "langchain-core>=0.1",
    "pyyaml>=6.0",
    "regex>=2023.0",
    "grpcio>=1.50",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "ruff>=0.1",
    "pip-audit>=2.0",
]

[project.scripts]
ahp = "ahp.cli.main:main"

[project.urls]
Homepage = "https://github.com/iamanandsingh/agent-history-protocol"
Repository = "https://github.com/iamanandsingh/agent-history-protocol"
Documentation = "https://github.com/iamanandsingh/agent-history-protocol#readme"
"Bug Tracker" = "https://github.com/iamanandsingh/agent-history-protocol/issues"
Changelog = "https://github.com/iamanandsingh/agent-history-protocol/blob/main/CHANGELOG.md"
Specification = "https://github.com/iamanandsingh/agent-history-protocol/blob/main/agent-history-protocol-spec.md"

[tool.hatch.build.targets.wheel]
packages = ["ahp"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled separately

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["_pytest"]

[[tool.mypy.overrides]]
module = ["_pytest", "_pytest.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
